fixing #192 in which submitting profile returns user to main menu.  fixing #186 in which Other option is changed to read Other Species (write in).  fixing #209 in which Submit, Edit, Delete buttons were not aligning properly on iPhone.

--- a/server/static/survey/assets/css/mobile.css
+++ b/server/static/survey/assets/css/mobile.css
@@ -14,7 +14,7 @@ html, body {
 
 a {
     color: rgb(244,244,244);
-    font-size: 16px;
+    font-size: 18px;
 }
 
 ::-webkit-input-placeholder {
